# footprint_analyzer

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: run_aggregation_example.py
footprint_analyzer/: __init__.py  config.py  domain.py  engine.py
tests/: test_engine.py
